# multimodal-serving-lab

./: .gitignore  README.md  pyproject.toml
avatar-gen/: README.md  bench_avatar.py  config.yaml  pipeline.py  pyproject.toml  requirements.txt
avatar-gen/backends/: __init__.py  base.py  musetalk.py  static.py  wav2lip.py
docs/: experiments.md  glossary.md  project-flow-and-terms.md  project-flow.md
lab-ui/: app.py  live_voice.py  pyproject.toml
lab-ui/static/: index.html
llm-serve/: README.md  bench_llm.py  chat.py  config.yaml  pyproject.toml  quant_sweep.py  requirements.txt
s2s-gen/: README.md  bench_csm.py  bench_s2s.py  bento_service.py  bentofile.yaml  config.yaml  csm_runtime.py  melo_runtime.py  pyproject.toml  requirements-csm.txt  runtime_checks.py  s2s.py
s2s-gen/backends/: __init__.py  base.py  cascade.py  csm.py  melo.py  moshi.py
scripts/: smoke_korean_voice.sh
sd-gen/: README.md  comfy_generate.py  config.yaml  generate.py  pyproject.toml  requirements.txt  run_once.py  upscale.py
serve/: README.md  bench.py  config.piper.yaml  config.yaml  pyproject.toml  requirements.txt  scheduler.py  server.py
serve/adapters/: __init__.py  base.py  echo.py  piper_tts.py  whisper_stt.py
stt-gen/: README.md  bench_stt.py  bento_service.py  bentofile.yaml  config.yaml  pyproject.toml  requirements.txt  transcribe.py
tts-gen/: README.md  bench_rtf.py  bento_service.py  bentofile.yaml  config.yaml  pyproject.toml  requirements.txt  stream_ttfb.py  synthesize.py
video-gen/: README.md  config.yaml  generate.py  generate_ltx.py  pyproject.toml  requirements.txt
voice-agent/: README.md  agent.py  bench_latency.py  config.yaml  pyproject.toml  requirements.txt
