[project]
name = "lab-ui"
version = "0.1.0"
description = "멀티모달 서빙 랩 대시보드 (FastAPI). 각 실험을 uv run 으로 실행."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
    "PyYAML>=6.0",
    "httpx>=0.27",
    # Live Voice 탭: STT→LLM→TTS를 lab-ui 프로세스 안에서 직접 실행하고 모델을 캐싱한다.
    # (다른 카드는 여전히 subprocess로 실행 — 이 의존성은 Live Voice 전용)
    "faster-whisper>=1.0",
    "piper-tts>=1.3",
    "openai>=1.30",
    "numpy>=1.24",
]

[tool.uv]
package = false
