[project]
name = "stt-gen"
version = "0.1.0"
description = "faster-whisper STT 서빙·최적화 실험 (BentoML)"
requires-python = ">=3.10"
# NVIDIA GPU: 추가 설치 불필요(같은 패키지). device=cuda + CUDA 12/cuDNN 런타임 필요,
# compute_type 은 float16 또는 int8_float16 권장.
dependencies = [
    "faster-whisper>=1.0",  # CTranslate2 기반, compute_type 으로 int8 양자화
    "PyYAML>=6.0",
    "numpy>=1.24",
    "piper-tts>=1.3",       # TTS↔STT 왕복 테스트용(tts-gen 보이스 재사용)
    "bentoml>=1.4",         # 서빙(프레임워크)
    "httpx>=0.27",
]

[tool.uv]
package = false
